[gd_scene load_steps=3 format=3 uid="uid://cayi7efrsqmm4"]

[ext_resource type="Script" path="res://Scripts/MapLoadingScreen.gd" id="1_cdpw7"]
[ext_resource type="Texture2D" uid="uid://dyuu41kc3id7b" path="res://resources/SolidWhite.png" id="2_b38aw"]

[node name="LoadingScreen" type="Node2D"]
script = ExtResource("1_cdpw7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0.901961)

[node name="Status" type="Label" parent="."]
offset_left = 425.0
offset_top = 258.0
offset_right = 725.0
offset_bottom = 295.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Loading Map Textures"
horizontal_alignment = 1

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 200.0
offset_top = 330.0
offset_right = 950.0
offset_bottom = 355.0
value = 34.0
nine_patch_stretch = true
texture_under = ExtResource("2_b38aw")
texture_progress = ExtResource("2_b38aw")
tint_under = Color(0.815686, 0.784314, 0.772549, 1)
tint_progress = Color(0, 0.956863, 0.823529, 1)

[node name="ProgressPercentage" type="Label" parent="."]
offset_left = 500.0
offset_top = 330.0
offset_right = 650.0
offset_bottom = 356.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0%
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressText" type="Label" parent="."]
offset_left = 500.0
offset_top = 370.0
offset_right = 650.0
offset_bottom = 405.0
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0/100"
horizontal_alignment = 1
